<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="Sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sort_by_name"
                android:title="@string/sort_by_name" />
            <item
                android:id="@+id/sort_by_date"
                android:title="@string/sort_by_date" />
            <item
                android:id="@+id/sort_by_duration"
                android:title="@string/sort_by_duration" />
        </menu>
    </item>
    
    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/ic_sort"
        android:title="Scan"
        app:showAsAction="ifRoom" />
</menu> 